- pulizia generale del codice - piccola aggiunta, non ricordo - aggiustato metodo release del RecorderManager anche se non lo uso ancora - rinominato lì "pause" in "stop"